--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PlayZ</title>
+  <title>Al ZamesTV</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://ssl.p.jwpcdn.com/player/v/8.36.6/jwplayer.js"></script>
   <script>jwplayer.key = "ITWMv7t88JGzI0xPwW8I0+LveiXX9SWbfdmt0ArUSyc=";</script>
@@ -18,6 +19,7 @@
       color: white;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       height: 100vh;
       overflow: hidden;
     }
@@ -102,6 +104,14 @@
       border-radius: 6px;
       background-color: white;
     }
+    .sidebar::-webkit-scrollbar {
+      width: 6px;
+    }
+    .sidebar::-webkit-scrollbar-thumb {
+      background: #00ffffaa;
+      border-radius: 4px;
+    }
+
 
     /* ✅ Responsive for phones */
     @media (max-width: 768px) {
