--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Al ZamesTV</title>
+  <title>AlZames TV</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://ssl.p.jwpcdn.com/player/v/8.36.6/jwplayer.js"></script>
@@ -147,9 +147,52 @@
         font-size: 1.5em;
       }
     }
+
+    #channelToggle {
+      display: none;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: #00ffff;
+      color: black;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 8px;
+      z-index: 1000;
+    }
+
+    @media (max-width: 768px) and (orientation: landscape) {
+      .sidebar {
+        display: none;
+      }
+
+      #channelToggle {
+        display: block;
+      }
+    }
+
+    /* Toggle button styling */
+    #channelToggle {
+      display: none;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: #00ffff;
+      color: black;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      z-index: 999;
+    }
+
   </style>
 </head>
 <body>
+
+  <button id="channelToggle" onclick="toggleSidebar()">☰ Channels</button>
+
   <div class="main">
     <h1></h1>
     <div id="video"></div>
@@ -162,6 +205,25 @@
   </div>
 
   <script>
+
+    function toggleSidebar() {
+
+      const sidebar = document.querySelector('.sidebar');
+      if (sidebar.style.display === 'block') {
+        sidebar.style.display = 'none';
+      } else {
+        sidebar.style.display = 'block';
+        sidebar.style.position = 'absolute';
+        sidebar.style.top = '50px';
+        sidebar.style.left = '0';
+        sidebar.style.width = '100%';
+        sidebar.style.zIndex = '999';
+        sidebar.style.background = '#222';
+      }
+    }
+
+
+
     const channels = {
       tv5: {
         name: 'TV 5',
